# vibe-agentic-ai-template

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vibe_agents/: __init__.py  cli.py
src/vibe_agents/crews/: __init__.py  code_crew.py
src/vibe_agents/graphs/: __init__.py  code_graph.py  weather_graph.py
src/vibe_agents/tools/: __init__.py  code_tools.py  weather.py
src/vibe_agents/utils/: __init__.py  config.py  console.py  mock_data.py
tests/: conftest.py  test_cli.py  test_config.py  test_crew_structure.py  test_graph_structure.py  test_mock_data.py  test_tools.py
