[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-agentic-ai-template"
version = "0.1.0"
description = "Starter template for agentic AI apps using LangGraph + CrewAI with Claude Sonnet"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Yaşar Tezeren", email = "yasar@tezeren.net" }]
keywords = ["langgraph", "crewai", "anthropic", "claude", "agents", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangGraph + LangChain
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    # CrewAI
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    # Data / config
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    # CLI / UX
    "rich>=13.7.0",
    "typer>=0.12.0",
    # HTTP
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
vibe-agents = "vibe_agents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vibe_agents"]
